--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -29,6 +29,8 @@ $color-gray-0: rgba(255, 255, 255, 1);
   --color-gray-25: #{$color-gray-25};
   --color-gray-0: #{$color-gray-0};
   --border-style: 1px solid rgba(36, 41, 46, 0.12);
+  --nice-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  --nice-shadow-hover: 0px 4px 8px rgba(0, 0, 0, 0.15);
 
   --primary-background: #fff;
   --primary-text-color: #000;
